--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
     <video autoplay loop muted playsinline>
       <source src="assets/videos/digital_twins3.mp4" type="video/mp4">
     </video>
-    <p class="twin-caption">Warehouse digital twin & pathfinding</p>
+    <p class="twin-caption">Warehouse digital twins</p>
   </div>
 
 </div>
