Enhance hero section with video and subtitle update
Added a video background to the hero section and adjusted subtitle formatting.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,27 @@
   <div class="container">
 
     <!-- HERO -->
-    <section class="hero">
+<section class="hero">
+  <video
+    class="hero-video"
+    autoplay
+    muted
+    loop
+    playsinline
+  >
+    <source src="assets/hero.mp4" type="video/mp4" />
+  </video>
+
+  <div class="hero-overlay"></div>
+
   <div class="hero-content">
     <h1>RobotMotion</h1>
-    <p class="subtitle">A large-scale human behavior dataset for training physical AI and humanoid robots.</p>
+    <p class="subtitle">
+      A large-scale human behavior dataset for training physical AI and humanoid robots.
+    </p>
   </div>
 </section>
+
 
     <!-- ABOUT -->
     <section class="minititle">
