--- a/index.html
+++ b/index.html
@@ -10,29 +10,23 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="page-bg">
 
     <!-- HERO -->
 <section class="hero">
-  <video
-    class="hero-video"
-    autoplay
-    muted
-    loop
-    playsinline
-  >
-    <source src="assets/hero.mp4" type="video/mp4" />
-  </video>
+      <video class="hero-video" autoplay muted loop playsinline>
+        <source src="assets/hero.mp4" type="video/mp4" />
+      </video>
 
-  <div class="hero-overlay"></div>
+      <div class="hero-overlay"></div>
 
-  <div class="hero-content">
-    <h1>RobotMotion</h1>
-    <p class="subtitle">
-      A large-scale human behavior dataset for training physical AI and humanoid robots.
-    </p>
-  </div>
-</section>
+      <div class="hero-content">
+        <h1>RobotMotion</h1>
+        <p class="subtitle">
+          A large-scale human behavior dataset for training physical AI and humanoid robots.
+        </p>
+      </div>
+    </section>
 
 
     <!-- ABOUT -->
